# projeto-p3

./: README.md
back-end/: .coverage  .env  alembic.ini  database.db  pyproject.toml  readme-back.md
back-end/alembic/: env.py
back-end/back_app/: .gitignore  crud.py  database.py  main.py  models.py  schemas.py  security.py  settings.py
back-end/back_app/routers/: accounts.py  auth.py  credit_cards.py  finance.py  importCSV.py  users.py
back-end/migrations/: env.py
back-end/migrations/versions/: 29b46e87ec0b_create_credit_cards_table.py  76c6c011d4e6_create_users_table.py  776f32e0bc45_create_info_users.py  7b6eb06761c0_create_info_users.py  877a11d47907_add_identificador_to_revenue_and_expense.py  90a3aab6765c_verify_itens.py  b4038c27c92d_create_info_users.py  bcf1e33973ec_teste.py  e0e91e375283_create_info_users.py  e2a92146a1cf_create_tag_gols.py  e5723f9a0000_add_goals_and_balance.py  eb56a928f3a7_create_accounts_table.py  fcff676f0706_create_accounts_table.py
back-end/tests/: conftest.py  test_db.py  test_users.py
front-end/css/: cadastro_style.css  dropdown.css
front-end/html/: cadastro.html  cartoes.html  config-perfil.html  contas.html  dicas.html  investimento.html  landing.html  login.html  metas.html  nav.html  principal.html
front-end/js/: functions-nav.js
